fix topbar vertical alignment in theme labs

--- a/lm-labs-webapp/src/main/resources/skin/resources/less/theme/labs/specific.less
+++ b/lm-labs-webapp/src/main/resources/skin/resources/less/theme/labs/specific.less
@@ -122,7 +122,6 @@ html>body {
       background-color: #444;
       background-color: rgba(255,255,255,.3);
       #font > .sans-serif(13px, normal, 1);
-      padding: 1px 9px;
       color: @white;
       color: rgba(255,255,255,.75);
       border: 1px solid #111;
@@ -165,17 +164,6 @@ html>body {
 .navbar-inner{
     height: @navbarHeight;
     .border-radius(0);
-}
-
-.navbar-form input, .navbar-form .btn {
-  //margin-bottom: 0;
-  padding: 1px 9px;
-}
-
-.navbar .nav > li > a {
-  padding: 0;
-  padding-top: 4px;
-  margin-right: -10px;
 }
 
 // Inverted navbar
